--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -6,6 +6,7 @@
   max-height: 75px;
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 .linksContainer {
@@ -55,4 +56,14 @@
   align-items: center;
   color: var(--navbar-text);
   text-decoration: none;
+}
+
+@media (width <= 500px) {
+  .container {
+    max-height: 60px;
+    padding: 1rem;
+  }
+  .linksContainer .title h2 {
+    font-size: 2.5rem;
+  }
 }
